# RSIF

./: .gitignore  LICENSE  Makefile  PYGOD_INSTALLATION.txt  README.md  TO_DO.md  clean_for_reproduction.py  pyproject.toml  setup.cfg  setup.py  tox.ini
best_distances/: ISF_14_glass.pickle  ISF_20_letter.pickle  ISF_25_musk.pickle  ISF_2_annthyroid.pickle  ISF_31_satimage-2.pickle  ISF_38_thyroid.pickle  ISF_40_vowels.pickle  ISF_41_Waveform.pickle  ISF_42_WBC.pickle  ISF_43_WDBC.pickle  ISF_44_Wilt.pickle  ISF_AID362red_train_allpossiblenominal.pickle  ISF_AIDS.pickle  ISF_CIFAR10_0.pickle  ISF_DD.pickle  ISF_ECGFiveDays.pickle  ISF_ENZYMES.pickle  ISF_Earthquakes.pickle  ISF_FashionMNIST_0.pickle  ISF_MiddlePhalanxOutlineCorrect.pickle  ISF_NCI1.pickle  ISF_PROTEINS_full.pickle  ISF_Reuters-corn-100.pickle  ISF_SVHN_0.pickle  ISF_SonyAIBORobotSurface1.pickle  ISF_amazon.pickle  ISF_apascal_entire_trainvsall.pickle  ISF_breast.pickle  ISF_breast0.pickle  ISF_cmc-nominal.pickle  ISF_imdb.pickle  ISF_items.pickle  ISF_length.pickle  ISF_order.pickle  ISF_ovarian.pickle  ISF_ovarian0.pickle  ISF_rosmap.pickle  ISF_rosmap0.pickle  ISF_solar-flare_FvsAll-cleaned.pickle  ISF_yelp.pickle  (+106 more)
case_study/: case_study_v0.ipynb  case_study_v1.ipynb  case_study_v2.ipynb  csutils.py
data/: SF_outliers_data.py  data_getter.py  datasets_const.py  load_graphs.py  volvo_data_lookup.ipynb
figures/: IF_implementation_comparison.csv  ISF_distance_search.html  LOF_distance_search.html  RISF_distance_search.html  distances_ranking.txt  statistical_tests.txt  tests.txt
isf/: forest.py  projection.py  run.py  splitting.py  tree.py
notebooks/: a.parquet  bus-experiments.ipynb  buses-data-demo.ipynb  calculate_reps.ipynb  cappa.ipynb  case_study.ipynb  case_study_v1.ipynb  case_study_v2.ipynb  cs_distances.ipynb  csutils.py  datasets.ipynb  datasets_description.ipynb  eda.ipynb  experiment.py  experiment_basic.ipynb  experiment_basic.ipynb.orig  experiments.ipynb  graphs_pickles_gen.ipynb  histograms_gen.ipynb  icss.pkl  isf_vs_rifs.ipynb  isolation_simforest.py  joblib_perf.ipynb  precalculate_distances.ipynb  report.ipynb  results_default.csv  results_max_depth.csv  results_max_n_ratio.csv  results_max_samples.csv  results_n_estimators.csv  sensitivity_analysis.ipynb  test_data.ipynb  testing_concurency.ipynb  use_cases.ipynb  utils.py  visualitations.ipynb  visualizations.ipynb  volvo_data_lookup.ipynb
requirements/: requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_experiments.txt
results/: 20holdouts_sensitivity_datasets.csv  (+32 more)
(+4751 files in other folders)
