[tool.poetry]
name = "random-isolation-similarity-forest"
version = "0.1.0"
description = "reaserch project developing new tool for outlier detection."
authors = ["SebChw <sebastian.chwilczynski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "risf"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
tox = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
