[tool.poetry]
name = "random-isolation-similarity-forest"
version = "0.1.0"
description = "reaserch project developing new tool for outlier detection."
authors = ["SebChw <sebastian.chwilczynski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "risf"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
pytest-cov = "^4.0.0"
ipywidgets = "^8.0.2"
networkx = "^2.8.8"
netrd = "^0.3.0"
pickles = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
tox = "^3.26.0"
autopep8 = "^2.0.0"
pylint = "^2.15.5"
tqdm = "^4.64.1"
pyod = "^1.0.6"
dataframe-image = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks test as integration (test entire functionality) may be slower than unit tests (deselect with '-m \"not integration\"')"
]
