[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "random-isolation-similarity-forest"
version = "0.0.1"
authors = [
  { name="SebChw", email="sebastian.chwilczynski@gmail.com" },
]
description =  "reaserch project developing new tool for outlier detection."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SebChw/Isolation-Similarity-Forest"
"Bug Tracker" = "https://github.com/SebChw/Isolation-Similarity-Forest/issues"

[tool.pytest.ini_options]
markers = ["integration: marks test as integration (test entire functionality) may be slower than unit tests (deselect with '-m \"not integration\"')"]
